feat: LATS, Explainability, Safety fixes — end of session
MCTS with LATS:
- LatsNode, LatsReflector, LatsValueFunction
- MctsTree enhanced with dual mode (classic + LATS)
- 62 tests

Native Explainability:
- ExplanationPrimitive (16 primitives, 5 categories)
- ExplanationGenerator (attribution, prototype, concept, counterfactual, mechanistic)
- DecisionProvenance, AuditLogger, ExplainabilityResource
- 44 tests

Safety fixes:
- SafetyMonitor: deception caps safety score below threshold
- LieDetectorTest: fixed null handling in List.of()
- SafetyMonitorTest: account for INFO alerts from ConfidenceCalibrator

All safety tests pass (BUILD SUCCESSFUL).